--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
 	<meta charset="UTF-8">
 	<title>Restaurant</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
 	<div id="container">
-		
+		<div class="header">
+			<div class="logo">
+				<img class="logoPic" src="https://cache-graphicslib.viator.com/graphicslib/thumbs674x446/9208/SITours/colosseum-2h-in-rome-616902.jpg">
+				<p class="name"> Maximus </p>
+			</div>
+			<div class="socialMedia">
+				<ul class="smIcons">
+					<li class="facebook"><i class="fab fa-facebook-f"></i></li>
+					<li class="insta"><i class="fab fa-instagram"></i></li>
+					<li class="twitter"><i class="fab fa-twitter"></i></li>
+				</ul>
+			</div>
+		</div>
+		<div class="naviCon">
+			<ul class="navBar">
+				<li class="story">Story</li>
+				<li class="menu">Menu</li>
+				<li class="reserve">Reservations</li>
+			</ul>
+		</div>
 	</div>
 	<script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
