tab functionality working

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -7,8 +7,45 @@
 </head>
 <body>
 	<div id="container">
-		
-	</div>
+		<div id="foodphotos">
+			<h2 class="food">Our works of Art...</h2>
+			<ul class="foodpics">
+				<li><img src="https://images.unsplash.com/photo-1516100882582-96c3a05fe590?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"></li>
+				<li><img src="https://images.unsplash.com/photo-1506802986183-24b7ddbb8d82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"></li>
+				<li><img src="https://images.unsplash.com/photo-1542365887-1149961dccc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"></li>
+				<li><img src="https://images.unsplash.com/photo-1499125562588-29fb8a56b5d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"></li>
+			</ul>
+		</div>
+		<div id="accordion">
+			<ul class="information">
+				<li>
+					<a href="#tab1">Our Story</a>
+				</li>
+				<li >
+					<a href="#tab2" >Our People</a>
+				</li>
+				<li>
+					<a href="#tab3" >Menu</a>
+				</li>
+				<li>
+					<a href="#tab4" >Reservations</a>
+				</li>
+			</ul>
+			<div class="tab-content">
+				<div id="tab1" class="panel">
+					<p>Tab number 1</p>
+				</div>
+				<div id="tab2" class="panel">
+					<p>Tab number 2</p>
+				</div>
+				<div id="tab3" class="panel">
+					<p>Tab number 3</p>
+				</div>
+				<div id="tab4" class="panel">
+					<p>Tab number 4</p>
+				</div>
+			</div>
+		</div>
 	<script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
